--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -2,7 +2,7 @@ PersistenceErrorOccured=A persistence error occurred.
 Previous=Pr\u00f3ximo
 Next=Anterior
 
-EquEquipamentoCreated=EquEquipamento was successfully created.
+EquEquipamentoCreated=Equipamento criado com sucesso.
 EquEquipamentoUpdated=EquEquipamento was successfully updated.
 EquEquipamentoDeleted=EquEquipamento was successfully deleted.
 CreateEquEquipamentoTitle=Create New EquEquipamento
