--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -3,9 +3,9 @@ Previous=Pr\u00f3ximo
 Next=Anterior
 
 EquEquipamentoCreated=Equipamento criado com sucesso.
-EquEquipamentoUpdated=EquEquipamento was successfully updated.
-EquEquipamentoDeleted=EquEquipamento was successfully deleted.
-CreateEquEquipamentoTitle=Create New EquEquipamento
+EquEquipamentoUpdated=Equipamento atualizado com sucesso.
+EquEquipamentoDeleted=Equipamento removido com sucesso.
+CreateEquEquipamentoTitle=Adicionar novo equipamento
 CreateEquEquipamentoSaveLink=Save
 CreateEquEquipamentoShowAllLink=Show All EquEquipamento Items
 CreateEquEquipamentoIndexLink=Index
