--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -1,6 +1,6 @@
 PersistenceErrorOccured=Ocorreu um erro de persist\u00eancia.
-Previous=Pr\u00f3ximo
-Next=Anterior
+Previous=Anterior
+Next=Pr\u00f3ximo
 
 EquEquipamentoCreated=Equipamento criado com sucesso.
 EquEquipamentoUpdated=Equipamento atualizado com sucesso.
@@ -11,6 +11,7 @@ CreateEquEquipamentoShowAllLink=Listar todos equipamentos
 CreateEquEquipamentoIndexLink=Menu Principal
 CreateEquEquipamentoLabel_equId=ID:
 CreateEquEquipamentoRequiredMessage_equId=O ID \u00e9 obrigat\u00f3rio
+CreateEquEquipamentoRequiredMessage_equDescricao=A descri\u00e7\u00e3o \u00e9 obrigat\u00f3ria
 CreateEquEquipamentoTitle_equId=ID
 CreateEquEquipamentoLabel_equDescricao=Descri\u00e7\u00e3o:
 CreateEquEquipamentoTitle_equDescricao=Descri\u00e7\u00e3o
@@ -29,6 +30,7 @@ EditEquEquipamentoIndexLink=Menu Principal
 EditEquEquipamentoLabel_equId=ID:
 EditEquEquipamentoRequiredMessage_equId=O ID \u00e9 obrigat\u00f3rio
 EditEquEquipamentoTitle_equId=ID
+EditEquEquipamentoRequiredMessage_equDescricao=A descri\u00e7\u00e3o \u00e9 obrigat\u00f3ria
 EditEquEquipamentoLabel_equDescricao=Descri\u00e7\u00e3o:
 EditEquEquipamentoTitle_equDescricao=Descri\u00e7\u00e3o
 EditEquEquipamentoLabel_equAtivo=Ativo:
@@ -475,3 +477,5 @@ ListUsuUsuarioTitle_usuEmail=UsuEmail
 ListUsuUsuarioTitle_usuSenha=UsuSenha
 ListUsuUsuarioTitle_usuAdmin=UsuAdmin
 ListUsuUsuarioTitle_usuTelefone=UsuTelefone
+
+
