finalizado equipamento tipo Finalizado partes do rafael -> OK

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -68,50 +68,50 @@ ListEquEquipamentoTitle_equDescricao=Descri\u00e7\u00e3o
 ListEquEquipamentoTitle_equAtivo=EquAtivo
 ListEquEquipamentoTitle_equObservacoes=Observa\u00e7\u00f5es
 ListEquEquipamentoTitle_equipamentoTipoTpeId=Tipo de Equipamento
-EquipamentoTipoCreated=Tipo de Equipamento for criado com sucesso.
-EquipamentoTipoUpdated=Tipo de Equipamento for atualizado com sucesso.
-EquipamentoTipoDeleted=Tipo de Equipamento for exclu\u00eddo com sucesso.
+EquipamentoTipoCreated=Tipo de Equipamento foi criado com sucesso.
+EquipamentoTipoUpdated=Tipo de Equipamento foi atualizado com sucesso.
+EquipamentoTipoDeleted=Tipo de Equipamento foi exclu\u00eddo com sucesso.
 CreateEquipamentoTipoTitle=Criar Novo Tipo de Equipamento
 CreateEquipamentoTipoSaveLink=Salvar
 CreateEquipamentoTipoShowAllLink=Listar Todos Tipos de Equipamentos
 CreateEquipamentoTipoIndexLink=Menu Principal
-CreateEquipamentoTipoLabel_tpeId=ID:
-CreateEquipamentoTipoRequiredMessage_tpeId=The TpeId \u00e9 obrigat\u00f3rio.
-CreateEquipamentoTipoTitle_tpeId=TpeId
-CreateEquipamentoTipoLabel_tpeDescricao=TpeDescricao:
-CreateEquipamentoTipoTitle_tpeDescricao=TpeDescricao
-EditEquipamentoTipoTitle=Editar EquipamentoTipo
+CreateEquipamentoTipoLabel_tpeId=ID
+CreateEquipamentoTipoRequiredMessage_tpeId=O ID \u00e9 obrigat\u00f3rio.
+CreateEquipamentoTipoTitle_tpeId=ID
+CreateEquipamentoTipoLabel_tpeDescricao=Descri\u00e7\u00e3o
+CreateEquipamentoTipoTitle_tpeDescricao=Descri\u00e7\u00e3o
+EditEquipamentoTipoTitle=Editar Tipo de Equipamento
 EditEquipamentoTipoSaveLink=Salvar
 EditEquipamentoTipoViewLink=Visualizar
-EditEquipamentoTipoShowAllLink=Listar Todos EquipamentoTipo Items
+EditEquipamentoTipoShowAllLink=Listar Todos Tipos de Equipamento
 EditEquipamentoTipoIndexLink=Menu Principal
-EditEquipamentoTipoLabel_tpeId=TpeId:
-EditEquipamentoTipoRequiredMessage_tpeId=The TpeId \u00e9 obrigat\u00f3rio.
-EditEquipamentoTipoTitle_tpeId=TpeId
-EditEquipamentoTipoLabel_tpeDescricao=TpeDescricao:
-EditEquipamentoTipoTitle_tpeDescricao=TpeDescricao
+EditEquipamentoTipoLabel_tpeId=ID:
+EditEquipamentoTipoRequiredMessage_tpeId=O ID \u00e9 obrigat\u00f3rio.
+EditEquipamentoTipoTitle_tpeId=ID
+EditEquipamentoTipoLabel_tpeDescricao=Descri\u00e7\u00e3o
+EditEquipamentoTipoTitle_tpeDescricao=Descri\u00e7\u00e3o
 ViewEquipamentoTipoTitle=Visualizar
 ViewEquipamentoTipoDestroyLink=Excluir
 ViewEquipamentoTipoEditLink=Editar
-ViewEquipamentoTipoCreateLink=Criar Novo EquipamentoTipo
-ViewEquipamentoTipoShowAllLink=Listar Todos EquipamentoTipo Items
+ViewEquipamentoTipoCreateLink=Criar Novo Tipo de Equipamento
+ViewEquipamentoTipoShowAllLink=Listar Todos Tipos de de Equipamento
 ViewEquipamentoTipoIndexLink=Menu Principal
-ViewEquipamentoTipoLabel_tpeId=TpeId:
-ViewEquipamentoTipoTitle_tpeId=TpeId
-ViewEquipamentoTipoLabel_tpeDescricao=TpeDescricao:
-ViewEquipamentoTipoTitle_tpeDescricao=TpeDescricao
+ViewEquipamentoTipoLabel_tpeId=ID
+ViewEquipamentoTipoTitle_tpeId=ID
+ViewEquipamentoTipoLabel_tpeDescricao=Descri\u00e7\u00e3o
+ViewEquipamentoTipoTitle_tpeDescricao=Descri\u00e7\u00e3o
 ListEquipamentoTipoTitle=Listar
-ListEquipamentoTipoEmpty=(Nenhum EquipamentoTipo Items Encontrado)
+ListEquipamentoTipoEmpty=(Nenhum Tipo de Equipamento Encontrado)
 ListEquipamentoTipoDestroyLink=Excluir
 ListEquipamentoTipoEditLink=Editar
 ListEquipamentoTipoViewLink=Visualizar
-ListEquipamentoTipoCreateLink=Criar Novo EquipamentoTipo
+ListEquipamentoTipoCreateLink=Criar Novo Tipo de Equipamento
 ListEquipamentoTipoIndexLink=Menu Principal
-ListEquipamentoTipoTitle_tpeId=TpeId
-ListEquipamentoTipoTitle_tpeDescricao=TpeDescricao
-LabLaboratorioCreated=LabLaboratorio for criado com sucesso.
-LabLaboratorioUpdated=LabLaboratorio for atualizado com sucesso.
-LabLaboratorioDeleted=LabLaboratorio for exclu\u00eddo com sucesso.
+ListEquipamentoTipoTitle_tpeId=ID
+ListEquipamentoTipoTitle_tpeDescricao=Descri\u00e7\u00e3o
+LabLaboratorioCreated=LabLaboratorio foi criado com sucesso.
+LabLaboratorioUpdated=LabLaboratorio foi atualizado com sucesso.
+LabLaboratorioDeleted=LabLaboratorio foi exclu\u00eddo com sucesso.
 CreateLabLaboratorioTitle=Criar Novo LabLaboratorio
 CreateLabLaboratorioSaveLink=Salvar
 CreateLabLaboratorioShowAllLink=Listar Todos LabLaboratorio Items
@@ -159,9 +159,9 @@ ListLabLaboratorioIndexLink=Menu Principal
 ListLabLaboratorioTitle_labId=LabId
 ListLabLaboratorioTitle_labDescricao=LabDescricao
 ListLabLaboratorioTitle_labObservacao=LabObservacao
-MelMelhoriaCreated=MelMelhoria for criado com sucesso.
-MelMelhoriaUpdated=MelMelhoria for atualizado com sucesso.
-MelMelhoriaDeleted=MelMelhoria for exclu\u00eddo com sucesso.
+MelMelhoriaCreated=MelMelhoria foi criado com sucesso.
+MelMelhoriaUpdated=MelMelhoria foi atualizado com sucesso.
+MelMelhoriaDeleted=MelMelhoria foi exclu\u00eddo com sucesso.
 CreateMelMelhoriaTitle=Criar Novo MelMelhoria
 CreateMelMelhoriaSaveLink=Salvar
 CreateMelMelhoriaShowAllLink=Listar Todos MelMelhoria Items
@@ -250,9 +250,9 @@ ListMelMelhoriaTitle_melResolvido=MelResolvido
 ListMelMelhoriaTitle_equEquipamento=EquEquipamento
 ListMelMelhoriaTitle_labId=LabId
 ListMelMelhoriaTitle_usuId=UsuId
-ParParamentrosCreated=ParParamentros for criado com sucesso.
-ParParamentrosUpdated=ParParamentros for atualizado com sucesso.
-ParParamentrosDeleted=ParParamentros for exclu\u00eddo com sucesso.
+ParParamentrosCreated=ParParamentros foi criado com sucesso.
+ParParamentrosUpdated=ParParamentros foi atualizado com sucesso.
+ParParamentrosDeleted=ParParamentros foi exclu\u00eddo com sucesso.
 CreateParParamentrosTitle=Criar Novo ParParamentros
 CreateParParamentrosSaveLink=Salvar
 CreateParParamentrosShowAllLink=Listar Todos ParParamentros Items
@@ -309,9 +309,9 @@ ListParParamentrosTitle_parId=ParId
 ListParParamentrosTitle_parDescricao=ParDescricao
 ListParParamentrosTitle_parValor=ParValor
 ListParParamentrosTitle_parObservacao=ParObservacao
-ResReservaCreated=ResReserva for criado com sucesso.
-ResReservaUpdated=ResReserva for atualizado com sucesso.
-ResReservaDeleted=ResReserva for exclu\u00eddo com sucesso.
+ResReservaCreated=ResReserva foi criado com sucesso.
+ResReservaUpdated=ResReserva foi atualizado com sucesso.
+ResReservaDeleted=ResReserva foi exclu\u00eddo com sucesso.
 CreateResReservaTitle=Criar Novo ResReserva
 CreateResReservaSaveLink=Salvar
 CreateResReservaShowAllLink=Listar Todos ResReserva Items
@@ -400,9 +400,9 @@ ListResReservaTitle_resObservacao=ResObservacao
 ListResReservaTitle_equId=EquId
 ListResReservaTitle_llabId=LlabId
 ListResReservaTitle_usuUsuarioIdUsuario=UsuUsuarioIdUsuario
-UsuUsuarioCreated=UsuUsuario for criado com sucesso.
-UsuUsuarioUpdated=UsuUsuario for atualizado com sucesso.
-UsuUsuarioDeleted=UsuUsuario for exclu\u00eddo com sucesso.
+UsuUsuarioCreated=UsuUsuario foi criado com sucesso.
+UsuUsuarioUpdated=UsuUsuario foi atualizado com sucesso.
+UsuUsuarioDeleted=UsuUsuario foi exclu\u00eddo com sucesso.
 CreateUsuUsuarioTitle=Criar Novo Usu\u00e1rio
 CreateUsuUsuarioSaveLink=Salvar
 CreateUsuUsuarioShowAllLink=Mostrar Todos Usu\u00e1rios
@@ -477,5 +477,3 @@ ListUsuUsuarioTitle_usuEmail=UsuEmail
 ListUsuUsuarioTitle_usuSenha=UsuSenha
 ListUsuUsuarioTitle_usuAdmin=UsuAdmin
 ListUsuUsuarioTitle_usuTelefone=UsuTelefone
-
-
