--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -116,9 +116,9 @@ CreateLabLaboratorioTitle=Criar Novo LabLaboratorio
 CreateLabLaboratorioSaveLink=Salvar
 CreateLabLaboratorioShowAllLink=Listar Todos LabLaboratorio Items
 CreateLabLaboratorioIndexLink=Menu Principal
-CreateLabLaboratorioLabel_labId=LabId:
+CreateLabLaboratorioLabel_labId=Id:
 CreateLabLaboratorioRequiredMessage_labId=The LabId \u00e9 obrigat\u00f3rio.
-CreateLabLaboratorioTitle_labId=LabId
+CreateLabLaboratorioTitle_labId=Id
 CreateLabLaboratorioLabel_labDescricao=LabDescricao:
 CreateLabLaboratorioRequiredMessage_labDescricao=The LabDescricao \u00e9 obrigat\u00f3rio.
 CreateLabLaboratorioTitle_labDescricao=LabDescricao
@@ -319,7 +319,7 @@ CreateResReservaIndexLink=Menu Principal
 CreateResReservaLabel_resId=ResId:
 CreateResReservaRequiredMessage_resId=The ResId \u00e9 obrigat\u00f3rio.
 CreateResReservaTitle_resId=ResId
-CreateResReservaLabel_resDataHora=ResDataHora:
+CreateResReservaLabel_resDataHora=Data e hora da reserva:
 CreateResReservaRequiredMessage_resDataHora=The ResDataHora \u00e9 obrigat\u00f3rio.
 CreateResReservaTitle_resDataHora=ResDataHora
 CreateResReservaLabel_resDataReservaInicial=ResDataReservaInicial:
